# 37SystemPulse-1

./: Cargo.toml  build.sh
release/: SHA256SUMS  syspulse-linux-amd64  syspulse-linux-amd64-native
src/: chaos_tests.rs  engine.rs  frequency.rs  main.rs  metrics.rs
src/collector/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  thermal.rs
src/output/: influx.rs  json.rs  mod.rs  remote.rs  table.rs
src/platform/linux/: mod.rs
