[package]
name = "syspulse"
version = "0.1.0"
edition = "2021"
description = "High-performance system monitoring CLI with decoupled collection and output"
license = "MIT"

[features]
default = ["linux"]
linux = []
macos = []
windows = []

[dependencies]

[dev-dependencies]

[[bin]]
name = "syspulse"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
